--- a/src/form/MainWindow.ui
+++ b/src/form/MainWindow.ui
@@ -35,7 +35,7 @@
   <customwidget>
    <class>CanvasWidget</class>
    <extends>QWidget</extends>
-   <header>../../../../src/ui/window/CanvasWidget.h</header>
+   <header>window/CanvasWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
